--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -19,7 +19,7 @@ body {
     width: 400px;
     height: 420px;
     background: #4e4d4d;
-    margin: auto;
+    margin: 0 auto;
     margin-top: 120px;
     box-shadow: 7px 13px 37px #000;
     padding: 10px 30px;
